@@ -3,6 +3,9 @@ Revision history for WWW::Mechanize
 {{$NEXT}}
     - Add redirects() as a short to HTTP::Response->redirects (GH#116) (Julien Fiegehenn)
 
+    [DOCUMENTATION]
+    - Document that click_button() will die when it cannot find a button (GH#136) (Julien Fiegehenn)
+
 2.01      2020-09-18 17:51:10Z
     - Add rel filter to find_link() (GH#305) (Julien Fiegehenn)
     - Fix typos (GH#304) (Ferenc Erki)
